--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "less": "^2.4.0",
     "less-plugin-clean-css": "^1.5.0"
   },
+  "scripts": {
+    "postinstall": "node ./lib/npm/postInstall.js"
+  },
   "repository": {
     "type": "git",
     "url": "ssh://istexdepl@vsistex.intra.inist.fr:22222/istex/web-header.git"
