Replace almost all img by font icons, add new link to istex web extension home, big clean up and refactoring, add jshint config, change gitingore config

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 node_modules
 nbproject
 .idea
-public/css/main.min.css
+public/css/*
+public/fonts/*
+!public/css/*.gitkeep
+!public/fonts/*.gitkeep
 npm-debug.log
