--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Bootstrap, template and assets to display Istex galaxy header.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node ./lib/npm/postInstall.js"
   },
   "dependencies": {
+    "async": "^2.4.0",
+    "font-awesome": "^4.7.0",
+    "fs-extra": "^3.0.0",
     "less": "^2.4.0",
     "less-plugin-clean-css": "^1.5.0"
-  },
-  "scripts": {
-    "postinstall": "node ./lib/npm/postInstall.js"
   },
   "repository": {
     "type": "git",
