--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Bootstrap, template and assets to display Istex galaxy header.",
   "main": "main.js",
   "scripts": {
-    "postinstall": "node ./lib/npm/postInstall.js"
+    "postinstall": "node ./lib/npm/postInstall.js",
+    "static": "./node_modules/node-static/bin/cli.js",
+    "less-watcher":"node ./lib/scripts/watch.js"
   },
   "dependencies": {
     "async": "^2.4.0",
+    "chokidar": "^1.7.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "^3.0.0",
     "less": "^2.4.0",
-    "less-plugin-clean-css": "^1.5.0"
+    "less-plugin-clean-css": "^1.5.0",
+    "node-static": "^0.7.9"
   },
   "repository": {
     "type": "git",
