--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://istexdepl@vsistex.intra.inist.fr:22222/istex/web-header.git"
+    "url": "https://github.com/istex/web-header.git"
   },
   "keywords": [
     "Istex",
