--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Bootstrap, template and assets to display Istex galaxy header.",
   "main": "main.js",
   "scripts": {
-    "postinstall": "node ./lib/npm/postInstall.js",
-    "static": "./node_modules/node-static/bin/cli.js -H '{\"Access-Control-Allow-Origin\":\"*\"}'",
+    "start": "npm-run-all --parallel less-watcher web-static",
+    "web-static": "./node_modules/node-static/bin/cli.js -H '{\"Access-Control-Allow-Origin\":\"*\"}'",
     "less-watcher": "node ./lib/scripts/watch.js",
+    "postinstall": "node ./lib/npm/postInstall.js",
     "precommit": "lint-staged"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^5.0.0",
+    "npm-run-all": "^4.1.2",
     "prettier": "^1.7.4"
   }
 }
