--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^5.0.0",
     "less": "^2.7.3",
     "less-plugin-clean-css": "^1.5.1",
+    "nanoajax": "^0.4.3",
     "node-static": "^0.7.10"
   },
   "repository": {
