--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {},
   "dependencies": {
-    "nanoajax": "^0.4.3"
+    "nanoajax": "^0.4.3",
+    "normalize.css": "^8.0.0"
   },
   "repository": {
     "type": "git",
