--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/git,node,linux,webstorm,netbeans
+public/js/bundle.js
