--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "author": "Istex API",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "prettier": "^1.12.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   }
