restructure dossier (simplifié)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bootstrap, template and assets to display Istex galaxy header.",
   "private": true,
   "scripts": {
-    "prettier": "prettier --write src/js/*.js src/css/*.css",
+    "prettier": "prettier --write src/*.js src/*.css",
     "webpack": "webpack --config webpack.config.js",
     "build": "npm run prettier && npm run webpack"
   },
