--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Istex API",
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "prettier": "^1.12.1",
