--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "prettier": "prettier --write src/*.js src/*.css",
-    "webpack": "webpack --config webpack.config.js",
-    "build": "npm run prettier && npm run webpack"
+    "webpack": "webpack -p --config webpack.config.js",
+    "build": "npm run prettier && npm run webpack",
+    "watch": "webpack-dev-server"
   },
   "dependencies": {
     "nanoajax": "^0.4.3"
@@ -28,6 +29,7 @@
     "prettier": "^1.12.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.4"
   }
 }
