modif source nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
 
     location / {
       add_header Access-Control-Allow-Origin *;
-      root /app;
+      root /app/public;
       index  index.html;
       autoindex on;
     }
