--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
+    "cross-var": "^1.1.0",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "prettier": "^1.12.1",
