--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^1.12.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
+    "webpack-auto-inject-version": "^1.1.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.4"
   }
