--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bootstrap, template and assets to display Istex galaxy header.",
   "private": true,
   "scripts": {
-    "prettier": "prettier --write src/*.js src/*.css src/*.json",
+    "prettier": "prettier --write src/*.js src/*.css src/menu/*.json",
     "webpack": "webpack -p --config webpack.config.js",
     "build": "npm run prettier && npm run webpack",
     "watch": "webpack-dev-server -d",
