--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
+    "markdown-html-webpack-plugin": "^1.0.1",
     "prettier": "^1.12.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
