--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -4,16 +4,15 @@ services:
 
   istex-web-header:
     container_name: istex-web-header
-    build:
-            context: .
-            args:
-                - http_proxy
-                - https_proxy
-    environment:
-            - HTTP_PROXY=${http_proxy}
-            - HTTPS_PROXY=${https_proxy}
-            - DEBUG=1
-    ports:
-        - "8000:80"
+    image: node:10.0.0
     volumes:
-        - ./src:/app/src:rw
+      - ./:/app
+    working_dir: /app
+    environment:
+      DEBUG: 1
+    command: npm run watch
+    ports :
+        -    target: 8080
+             published: 8080
+             protocol: tcp
+             mode: host
