modification méthode ajout du readme

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -9,8 +9,10 @@ services:
       - ./:/app
     working_dir: /app
     environment:
-      DEBUG: 1
-    command: npm run watch
+      - DEBUG=1
+      - HTTP_PROXY=${http_proxy}
+      - HTTPS_PROXY=${https_proxy}
+    command: bash -c "npm install && chmod a+rwx node_modules && npm run watch"
     ports :
         -    target: 8080
              published: 8080
