--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -12,7 +12,7 @@ services:
       - DEBUG=1
       - HTTP_PROXY=${http_proxy}
       - HTTPS_PROXY=${https_proxy}
-    command: bash -c "npm install && chmod a+rwx node_modules && npm run watch"
+    command: bash -c "npm run watch"
     ports :
         -    target: 8080
              published: 8080
