--- a/src/config.json
+++ b/src/config.json
@@ -128,12 +128,12 @@
 },
 {
     "_id": "5acca78fa736dcf0f0676868",
-    "uri": "ark:/65376/DZ2-1XP09DLT-M",
+    "uri": "ark:/12345/DZ2-1XP09DLT-M",
     "z351": "www",
     "A2KZ": [
         "doc"
     ],
-    "QoTd": "https://www.istex./",
+    "QoTd": "https://www.istex.fr/",
     "Cl2W": "",
     "publicationDate": "2018-04-23T12:50:40.350Z",
     "BNzf": "Acceuil ISTEX",
