mode lodex + correctif

--- a/src/config.json
+++ b/src/config.json
@@ -134,9 +134,9 @@
         "doc"
     ],
     "QoTd": "https://www.istex.fr/",
-    "Cl2W": "",
+    "Cl2W": "https://www.istex.fr/wp-content/themes/istex/images/istex_logo.svg",
     "publicationDate": "2018-04-23T12:50:40.350Z",
-    "BNzf": "Acceuil ISTEX",
+    "BNzf": "Accueil ISTEX",
     "hidden": true,
     "menu": [{
       "title": "Home",
