--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
-{"total":10,"data":[{
+{"total":11,"data":[{
     "_id": "5acca78fa736dcf0f067685f",
     "uri": "ark:/65376/DZ2-X6HC3XP9-F",
     "z351": "Bouton",
@@ -110,7 +110,21 @@
     "publicationDate": "2018-04-23T12:54:07.075Z",
     "BNzf": "ISTEX Linked Data",
     "hidden": false,
-    "menu": []
+    "menu": [{
+      "title": "Accueil",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_home_menu.svg",
+      "link": "//data.istex.fr/"
+    },
+    {
+      "title": "Ontologie",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_chercheur_menu.svg",
+      "link": "//data.istex.fr/ontology/istex/"
+    },
+    {
+      "title": "Graphe",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_responsable_menu.svg",
+      "link": "/graph"
+    }]
 },
 {
     "_id": "5acca78fa736dcf0f0676867",
@@ -139,7 +153,7 @@
     "BNzf": "Accueil ISTEX",
     "hidden": true,
     "menu": [{
-      "title": "Home",
+      "title": "Accueil",
       "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_home_menu.svg",
       "link": "//www.istex.fr"
     },
@@ -157,6 +171,49 @@
       "title": "Curieux",
       "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_curieux_menu.svg",
       "link": "//www.istex.fr/curieux/"
+    },
+    {
+      "title": "Blog",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_blog_menu.svg",
+      "link": "//blog.istex.fr/"
+    }] 
+},
+{
+    "_id": "5acca78fa736dcf0f0676869",
+    "uri": "ark:/12345/DZ2-1XP09DLT-M",
+    "z351": "blog",
+    "A2KZ": [
+        "doc"
+    ],
+    "QoTd": "https://blog.istex.fr/",
+    "Cl2W": "https://www.istex.fr/wp-content/themes/istex/images/istex_logo.svg",
+    "publicationDate": "2018-04-23T12:50:40.350Z",
+    "BNzf": "Technistex au coeur de la plateforme ISTEX",
+    "hidden": true,
+    "menu": [{
+      "title": "Accueil",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_home_menu.svg",
+      "link": "//www.istex.fr"
+    },
+    {
+      "title": "Chercheur",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_chercheur_menu.svg",
+      "link": "//www.istex.fr/chercheur/"
+    },
+    {
+      "title": "Responsable",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_responsable_menu.svg",
+      "link": "//www.istex.fr/responsable/"
+    },
+    {
+      "title": "Curieux",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_curieux_menu.svg",
+      "link": "//www.istex.fr/curieux/"
+    },
+    {
+      "title": "Blog",
+      "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_blog_menu.svg",
+      "link": "//blog.istex.fr/"
     }] 
 }]
 }
