--- a/src/config.json
+++ b/src/config.json
@@ -121,7 +121,7 @@
       "link": "//data.istex.fr/ontology/istex/"
     },
     {
-      "title": "Graphe",
+      "title": "Ressources",
       "icon": "https://www.istex.fr/wp-content/themes/istex/images/ic_responsable_menu.svg",
       "link": "/graph"
     }]
