new catchphrase for API

--- a/src/config.json
+++ b/src/config.json
@@ -64,7 +64,7 @@
     "QoTd": "https://api.istex.fr/",
     "Cl2W": "https://www.istex.fr/wp-content/uploads/2017/11/ic_Istex_API-1.svg",
     "publicationDate": "2018-04-23T12:57:11.593Z",
-    "BNzf": "API ISTEX",
+    "BNzf": "Le socle de la plateforme ISTEX",
     "hidden": false,
     "menu": []
 },
